--- a/web/jjh_samoo/html5up-story/index.html
+++ b/web/jjh_samoo/html5up-story/index.html
@@ -13,6 +13,14 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
+		
+		<!-- Header -->
+		<header id="header" class="alt">
+			<span class="logo"><img src="images/logo.svg" alt="" /></span>
+			<h1>Stellar</h1>
+			<p>Just another free, fully responsive site template<br />
+			built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+		</header>
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
@@ -20,10 +28,11 @@
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
 						<div class="content">
-							<h1>Story</h1>
-							<p class="major">A (modular, highly tweakable) responsive one-page template designed by <a href="https://html5up.net">HTML5 UP</a> and released for free under the <a href="https://html5up.net/license">Creative Commons</a>.</p>
+							<h1> IOT 무인 물류 관리 </h1>
+							<p class="major">  QR 코드를 이용한 창고의 물건 이동 및 검색을 통한 직원의 작업의 효율성을 올려주는 로봇을 제어하기 위한 설정 및 관리 하는 페이지.
+							</a></p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle">Get Started</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll-middle"> 더 알아보기</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -34,10 +43,11 @@
 				<!-- Two -->
 					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="first">
 						<div class="content">
-							<h2>Magna etiam feugiat</h2>
-							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
-							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+							<h2> 국내 물류 센터 </h2>
+							<p> 현재 국내 물류 창고업 등록이 되어 있는 창고업(1,448곳), 항만창고(225곳), 보세창고(698곳)은의 물류 창고로 등록이 되어있습니다. 하지만 아직 많은 곳에서
+								직접적인 인력을 통하여 관리를 하고 있습니다. </p>
+								<ul class="actions stacked">
+									<li><a href="#second" class="button big wide smooth-scroll-middle"> 더 알아보기</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -46,12 +56,12 @@
 					</section>
 
 				<!-- Three -->
-					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-left content-align-left image-position-center onscroll-image-fade-in" id= "second">
 						<div class="content">
 							<h2>Tempus adipiscing</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#third" class="button big wide smooth-scroll-middle"> 더 알아보기</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -60,12 +70,12 @@
 					</section>
 
 				<!-- Four -->
-					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in">
+					<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id = "third">
 						<div class="content">
 							<h2>Pharetra etiam nulla</h2>
 							<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi id ante sed ex pharetra lacinia sit amet vel massa. Donec facilisis laoreet nulla eu bibendum. Donec ut ex risus. Fusce lorem lectus, pharetra pretium massa et, hendrerit vestibulum odio lorem ipsum dolor sit amet.</p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button">Learn More</a></li>
+								<li><a href="#" class="button"> 맨 위로 </a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -251,7 +261,7 @@
 									<h3>Dolor</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
 								</section>
-								<section>
+								<!-- <section>
 									<span class="icon solid style2 major fa-wifi"></span>
 									<h3>Amet</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
@@ -295,7 +305,7 @@
 									<span class="icon solid style2 major fa-leaf"></span>
 									<h3>Risus</h3>
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi dui turpis, cursus eget orci amet aliquam congue semper. Etiam eget ultrices risus nec tempor elit.</p>
-								</section>
+								</section> -->
 							</div>
 						</div>
 					</section>
