--- a/web/pages-recoverpw.html
+++ b/web/pages-recoverpw.html
@@ -42,20 +42,20 @@
                         <h4 class="font-18 m-b-5 text-center">비밀번호 초기화</h4>
                         <p class="text-muted text-center">Enter your Email and instructions will be sent to you!</p>
 
-                        <form class="form-horizontal m-t-30" action="index.html">
+                        <!-- <form class="form-horizontal m-t-30" action="index.html"> -->
 
                             <div class="form-group">
                                 <label for="useremail">Email</label>
-                                <input type="email" class="form-control" id="useremail" placeholder="Enter email">
+                                <input type="email" class="form-control" id="email" placeholder="Enter email">
                             </div>
 
                             <div class="form-group row m-t-20">
                                 <div class="col-12 text-right">
-                                    <button class="btn btn-primary w-md waves-effect waves-light" type="submit">초기화</button>
+                                    <button class="btn btn-primary w-md waves-effect waves-light" id="button" type="submit">초기화</button>
                                 </div>
                             </div>
 
-                        </form>
+                        <!-- </form> -->
                     </div>
 
                 </div>
@@ -80,6 +80,6 @@
 
         <!-- App js -->
         <script src="assets/js/app.js"></script>
-
+        <script src="js/pages-recoverpw.js"></script>
     </body>
 </html>
