--- a/web/pages-login.html
+++ b/web/pages-login.html
@@ -41,7 +41,7 @@
                         <h4 class="font-18 m-b-5 text-center">환영합니다 !</h4>
                         <p class="text-muted text-center">Sign in to continue Clean IoT.</p>
 
-                        <form class="form-horizontal m-t-30" method="POST" action="/process/login">
+                        <!-- <form class="form-horizontal m-t-30" method="POST" action="/process/login"> -->
 
                             <div class="form-group">
                                 <label for="useremail">Email</label>
@@ -61,7 +61,7 @@
                                     </div>
                                 </div>
                                 <div class="col-sm-6 text-right">
-                                    <button class="btn btn-primary w-md waves-effect waves-light" type="submit">로그인</button>
+                                    <button class="btn btn-primary w-md waves-effect waves-light" id="button" type="submit">로그인</button>
                                 </div>
                             </div>
 
@@ -70,7 +70,7 @@
                                     <a href="pages-recoverpw.html" class="text-muted"><i class="mdi mdi-lock"></i>비밀번호 찾기</a>
                                 </div>
                             </div>
-                        </form>
+                        <!-- </form> -->
                     </div>
 
                 </div>
@@ -95,6 +95,6 @@
 
         <!-- App js -->
         <script src="assets/js/app.js"></script>
-
+        <script src="js/pages-login.js"></script>
     </body>
 </html>
