--- a/web/pages-recoverpw.html
+++ b/web/pages-recoverpw.html
@@ -63,7 +63,7 @@
 
             <div class="m-t-40 text-center">
                 <p class="text-white">Remember It ? <a href="pages-login.html" class="font-500 font-14 text-white font-secondary"> 로그인 </a> </p>
-                <p class="text-white">2020 - 2021 © Clean IoT <i class="mdi mdi-heart text-danger"></i></p>
+                <p class="text-white">2020 - 2021 © Ls IoT <i class="mdi mdi-heart text-danger"></i></p>
             </div>
 
         </div>
