--- a/web/use/_home/home_explain.html
+++ b/web/use/_home/home_explain.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Mega Brain</title>
+		<title> Ls IoT </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" type="text/css" href="../../assets/css/main.css"/>
@@ -81,7 +81,7 @@
 					</div>
 				</div>
 			</div>
-			<a href="/home_function.html">가정용 동작 바로가기</a>    
+			<!-- <a href="/home_function.html"> 동작 바로가기 </a>     -->
 		</div>                
     </body>
 </html>
