--- a/web/pages-login.html
+++ b/web/pages-login.html
@@ -34,12 +34,12 @@
                 <div class="card-body">
 
                     <h3 class="text-center m-0">
-                        <a href="index.html" class="logo logo-admin"><img src="assets/images/logo.png" height="30" alt="logo"></a>
+                        <a href="index.html" class="logo logo-admin"><img src="assets/images/logo.png" height="120" alt="logo"></a>
                     </h3>
 
                     <div class="p-3">
                         <h4 class="font-18 m-b-5 text-center">환영합니다 !</h4>
-                        <p class="text-muted text-center">Sign in to continue Clean IoT.</p>
+                        <p class="text-muted text-center">Sign in to continue Ls IoT.</p>
 
                         <!-- <form class="form-horizontal m-t-30" method="POST" action="/process/login"> -->
 
@@ -78,7 +78,7 @@
 
             <div class="m-t-40 text-center">
                 <p class="text-white">아이디가 없으신가요?<a href="pages-register.html" class="font-500 font-14 text-white font-secondary"> 회원가입</a> </p>
-                <p class="text-white">2020 - 2021 © Clean IoT<i class="mdi mdi-heart text-danger"></i></p>
+                <p class="text-white">2020 - 2021 © Ls IoT<i class="mdi mdi-heart text-danger"></i></p>
             </div>
 
         </div>
