--- a/web/use/_home/home_running.html
+++ b/web/use/_home/home_running.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Mega - 가정용 동작</title>
+    <title> Ls IoT </title>
     <link rel="stylesheet" type="text/css" href="../../assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="../../assets/css/running.css">
 
