--- a/web/use/_industry/industry_setting.html
+++ b/web/use/_industry/industry_setting.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Mega Brain</title>
+		<title> Ls IoT </title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" type="text/css" href="../../assets/css/main.css"/>
