--- a/web/use/_intro/intro.html
+++ b/web/use/_intro/intro.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Mega Brain</title>
+        <title> Ls IoT </title>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <link rel="stylesheet" type="text/css" href="../../assets/css/main.css"/>
@@ -56,14 +56,14 @@
             <div class="intro_main">
                 <div class="explain">
                     <span>Company</span><br><br>
-                    Clean IoT 플랫폼은 더욱 빨리지는 인터넷 시대에 맞춰 Global표준을 준수하여 다른 플랫폼과 호환성을 확보하며 가정, 산업, 사무에 기술을 확대 적용하여 고객들이 원하는 서비스를 제공하고 있습니다.
+                    Ls IoT 플랫폼은 더욱 빨리지는 인터넷 시대에 맞춰 Global표준을 준수하여 다른 플랫폼과 호환성을 확보하며 가정, 산업, 사무에 기술을 확대 적용하여 고객들이 원하는 서비스를 제공하고 있습니다.
                 </div><br>
                 <div>
                     <div class="tra">
                         <img src="../../images/intro/tra_01.png" class="tra_01">
                         <img src="../../images/intro/tra_02.png" class="tra_02">
                         <img src="../../images/intro/tra_03.png" class="tra_03">
-                        <p class="title">Clean IoT</p>
+                        <p class="title"> Ls IoT </p>
                     </div><br>
                     <div class="content">
                         <span class="head">다중 호환성 적용</span><br>
@@ -114,7 +114,7 @@
                     </div>
                     <div class="member">
                         <span class="number">16</span>
-                        <span class="name">허현준</span>
+                        <span class="name">신봉기</span>
                         <div class="work">
                             디자인 구현, 디자인 기획, api적용
                         </div>
