--- a/web/Sanup/index.html
+++ b/web/Sanup/index.html
@@ -349,7 +349,7 @@
 		<section class="wrapper style1 align-center">
 			<div class="inner medium">
 				<h2>Get in touch</h2>
-				<form method="post" action="#">
+				<form method="post" action="/proposal">
 					<div class="fields">
 						<div class="field half">
 							<label for="name">Name</label>
