--- a/web/index.html
+++ b/web/index.html
@@ -49,7 +49,7 @@
                         <a href="pages-login.html">Login</a>    
                     </div> -->
                 </li>
-                <li class="menu-button">Menu</li>
+                <!-- <li class="menu-button">Menu</li> -->
             </ul>
         </header>
         <!-- action bar -->
