--- a/web/Sanup/index.html
+++ b/web/Sanup/index.html
@@ -377,7 +377,7 @@
 			<div class="inner">
 				<ul class="icons">
 					<li><a href="#" class="icon brands style2 fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a>
+					<li><a href="1.html" class="icon brands style2 fa-facebook-f"><span class="label">Facebook</span></a>
 					</li>
 					<li><a href="https://www.instagram.com/asddddw_/" class="icon brands style2 fa-instagram"><span
 								class="label">Instagram</span></a></li>
