--- a/node_file/web/pages-register.html
+++ b/node_file/web/pages-register.html
@@ -47,6 +47,7 @@
                             <div class="form-group">
                                 <label for="useremail">Email</label>
                                 <input type="email" class="form-control" id="email" name="id" placeholder="Enter email">
+                                <p ip = 'checked'></p>
                             </div>
 
                             <div class="form-group">
