--- a/node_file/web/industry_function.html
+++ b/node_file/web/industry_function.html
@@ -347,16 +347,16 @@
                             </li> -->
 
                             <li>
-                                <a href="#" ><i class="mdi mdi-airplane" ></i> <span id ="jkhajax">Front End</span></a>
+                                <a href="#" ><i class="mdi ion-podium" ></i> <span id ="jkhajax-1">상황판</span></a>
                             </li>
                             <li>
-                                <a href="#"><i class="mdi mdi-airplane"></i><span id ="jkhajax"> Front End</span></a>
+                                <a href="#"><i class="mdi ion-android-social-user"></i><span id ="jkhajax-2">수동조작</span></a>
                             </li>
                             <li>
-                                <a href="#"><i class="mdi mdi-airplane"></i><span id ="jkhajax"> Front End</span></a>
+                                <a href="#"><i class="mdi ion-gear-b"></i><span id ="jkhajax-3">자동조작</span></a>
                             </li>
                             <li>
-                                <a href="#"><i class="mdi mdi-airplane"></i><span id = "jkhajax"> Front End</span></a>
+                                <a href="#"><i class="mdi mdi-cube-outline"></i><span id = "jkhajax-4">비고</span></a>
                             </li>
 
                         </ul>
