--- a/node_file/web/office_function.html
+++ b/node_file/web/office_function.html
@@ -347,16 +347,19 @@
                             </li> -->
 
                             <li>
-                                <a href="#" ><i class="mdi mdi-airplane" ></i> <span id ="jkhajax">Front End</span></a>
+                                <a href="#" ><i class="mdi ion-podium" ></i> <span id ="jkhajax-1">관리통계</span></a>
                             </li>
                             <li>
-                                <a href="#"><i class="mdi mdi-airplane"></i><span id ="jkhajax"> Front End</span></a>
+                                <a href="#"><i class="mdi ion-clipboard"></i><span id ="jkhajax-2">제품목록</span></a>
                             </li>
                             <li>
-                                <a href="#"><i class="mdi mdi-airplane"></i><span id ="jkhajax"> Front End</span></a>
+                                <a href="#"><i class="mdi ion-ios7-cart"></i><span id ="jkhajax-3">제품구입</span></a>
                             </li>
                             <li>
-                                <a href="#"><i class="mdi mdi-airplane"></i><span id = "jkhajax"> Front End</span></a>
+                                <a href="#"><i class="mdi ion-android-note"></i><span id = "jkhajax-4">제품구매확인</span></a>
+                            </li>
+                            <li>
+                                <a href="#"><i class="mdi mdi-airplane"></i><span id = "jkhajax-5">제품구매확인</span></a>
                             </li>
 
                         </ul>
