--- a/node_file/web/landing/industry/index.html
+++ b/node_file/web/landing/industry/index.html
@@ -349,7 +349,7 @@
 		<section class="wrapper style1 align-center">
 			<div class="inner medium">
 				<h2>Get in touch</h2>
-				<form method="post" action="/proposal">
+				<form method="post" action="/suggest">
 					<div class="fields">
 						<div class="field half">
 							<label for="name">Name</label>
@@ -385,7 +385,7 @@
 					</li>
 					<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
-				<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+				<p>&copy; Untitled. Design: <a href="../../industry_function.html">HTML5 UP</a>.</p>
 			</div>
 		</footer>
 
