--- a/node_file/web/landing/office/index.html
+++ b/node_file/web/landing/office/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+<!DOCTYPE HTML lang="ko">
 <!--
 	Story by HTML5 UP
 	html5up.net | @ajlkn
@@ -347,7 +347,7 @@
 								<li><a href="#" class="icon brands style2 fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 								<li><a href="#" class="icon style2 fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
-							<p>&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+							<p>&copy; Untitled. Design: <a href="../../office_function.html">HTML5 UP</a>.</p>
 						</div>
 					</footer>
 
