--- a/node_file/web/landing/office/index.html
+++ b/node_file/web/landing/office/index.html
@@ -314,7 +314,7 @@
 					<section class="wrapper style1 align-center">
 						<div class="inner medium">
 							<h2>Get in touch</h2>
-							<form method="post" action="#">
+							<form method="post" action="/suggest">
 								<div class="fields">
 									<div class="field half">
 										<label for="name">Name</label>
