--- a/node_file/web/office_function.html
+++ b/node_file/web/office_function.html
@@ -195,7 +195,7 @@
                             <a href="#"><i class="mdi ion-android-note"></i><span id="jkhajax-4">제품구매확인</span></a>
                         </li>
                         <li>
-                            <a href="#"><i class="mdi mdi-airplane"></i><span id="jkhajax-5">물류창고상황</span></a>
+                            <a href="#"><i class="mdi mdi-airplane"></i><span id="jkhajax-5">주문기록</span></a>
                         </li>
 
                     </ul>
