--- a/node_file/web/office_function.html
+++ b/node_file/web/office_function.html
@@ -183,19 +183,19 @@
                     <ul class="navigation-menu">
 
                         <li>
-                            <a href="#"><i class="mdi ion-podium"></i> <span id="jkhajax-1">관리통계</span></a>
+                            <a href="#" id="jkhajax-1"><i class="mdi ion-podium"></i> <span>관리통계</span></a>
                         </li>
                         <li>
-                            <a href="#"><i class="mdi ion-clipboard"></i><span id="jkhajax-2">제품목록</span></a>
+                            <a href="#" id="jkhajax-2"><i class="mdi ion-clipboard"></i><span>제품목록</span></a>
                         </li>
                         <li>
-                            <a href="#"><i class="mdi ion-ios7-cart"></i><span id="jkhajax-3">제품구입</span></a>
+                            <a href="#" id="jkhajax-3"><i class="mdi ion-ios7-cart"></i><span>제품구입</span></a>
                         </li>
                         <li>
-                            <a href="#"><i class="mdi ion-android-note"></i><span id="jkhajax-4">제품구매확인</span></a>
+                            <a href="#" id="jkhajax-4"><i class="mdi ion-android-note"></i><span>제품구매확인</span></a>
                         </li>
                         <li>
-                            <a href="#"><i class="mdi mdi-airplane"></i><span id="jkhajax-5">물류창고상황</span></a>
+                            <a href="#" id="jkhajax-5"><i class="mdi mdi-airplane"></i><span>물류창고상황</span></a>
                         </li>
 
                     </ul>
