--- a/node_file/web/office_function.html
+++ b/node_file/web/office_function.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html lang="ko">
 <html>
 
 <head>
@@ -13,7 +13,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=0, minimal-ui">
-    <title>Admiria - Responsive Flat Admin Dashboard</title>
+    <title>Teamproject - office Dashboard</title>
     <meta content="Admin Dashboard" name="description" />
     <meta content="Themesbrand" name="author" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -43,7 +43,7 @@
 
                 <div class="logo">
                     <a href="index.html" class="logo">
-                        <img src="assets/images/logo-sm.png" alt="" height="30">
+                        <img src="assets/images/logo-sm2.png" alt="" height="50">
                     </a>
 
                 </div>
@@ -77,9 +77,9 @@
                         <li class="list-inline-item dropdown notification-list hide-phone">
                             <a class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown" href="#"
                                 role="button" aria-haspopup="false" aria-expanded="false">
-                                English <img src="assets/images/flags/us_flag.jpg" class="ml-2" height="16" alt="" />
+                                Korea <img src="assets/images/flags/korea_flag.jpg" class="ml-2" height="16" alt="" />
                             </a>
-                            <div class="dropdown-menu dropdown-menu-right language-switch">
+                            <!-- <div class="dropdown-menu dropdown-menu-right language-switch">
                                 <a class="dropdown-item" href="#"><img src="assets/images/flags/germany_flag.jpg" alt=""
                                         height="16" /><span> German </span></a>
                                 <a class="dropdown-item" href="#"><img src="assets/images/flags/italy_flag.jpg" alt=""
@@ -92,7 +92,7 @@
                                         height="16" /><span> korea </span></a>
                                 <a class="dropdown-item" href="#"><img src="assets/images/flags/russia_flag.jpg" alt=""
                                         height="16" /><span> Russian </span></a>
-                            </div>
+                            </div> -->
                         </li>
                         <!-- notification-->
                         <li class="list-inline-item dropdown notification-list">
@@ -104,7 +104,7 @@
                             <div class="dropdown-menu dropdown-menu-right dropdown-arrow dropdown-menu-lg">
                                 <!-- item-->
                                 <div class="dropdown-item noti-title">
-                                    <h5>Notification (3)</h5>
+                                    <h5>Notification (2)</h5>
                                 </div>
 
                                 <!-- item-->
@@ -235,8 +235,7 @@
 
             <div class="row">
                 <div class="col-12">
-                    2018 - 2019 © Admiria <span class="text-muted hide-phone pull-right">Crafted with <i
-                            class="mdi mdi-heart text-danger"></i> by Themesbrand</span>
+                    2021 © Teamproject <span class="text-muted hide-phone pull-right">졸업작품</span>
                 </div>
             </div>
         </div>
