--- a/node_file/web/landing/office/index.html
+++ b/node_file/web/landing/office/index.html
@@ -2,7 +2,7 @@
 
 <html>
 	<head>
-		<title>Story by HTML5 UP</title>
+		<title>LS IoT Office</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -13,16 +13,16 @@
 		<!-- Header -->
 		<header id="header" class="alt">
 			<span class="logo"><img src="images/logo.svg" alt="" /></span>
-			<h1>Stellar</h1>
-			<p>Just another free, fully responsive site template<br />
-			built by <a href="https://twitter.com/ajlkn">@ajlkn</a> for <a href="https://html5up.net">HTML5 UP</a>.</p>
+			<h1>Ls IoT</h1>
+			<p>Just another free, fully responsive site template<br /></p>
+				<a href="#zero" class="button big wide smooth-scroll-middle" id="button1">   Next    </a>
 		</header>
 
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right">
+					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right" id="zero">
 						<div class="content">
 							<h1> IoT 무인 물류 관리 시스템 </h1>
 							<p class="major">  QR 코드를 이용한 창고의 물건 이동 및 검색을 통한 직원의 작업의 효율성을 올려주는 로봇을 제어하기 위한 설정 및 관리 하는 페이지 입니다.
