--- a/node_file/web/landing/office/index.html
+++ b/node_file/web/landing/office/index.html
@@ -22,8 +22,8 @@
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right" id="zero">
-						<div class="content">
+					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right" >
+						<div id="zero" class="content" >
 							<h1> IoT 무인 물류 관리 시스템 </h1>
 							<p class="major">  QR 코드를 이용한 창고의 물건 이동 및 검색을 통한 직원의 작업의 효율성을 올려주는 로봇을 제어하기 위한 설정 및 관리 하는 페이지 입니다.
 							</a></p>
