--- a/node_file/web/landing/office/index.html
+++ b/node_file/web/landing/office/index.html
@@ -1,30 +1,40 @@
-<!DOCTYPE HTML lang="ko">
+<!DOCTYPE HTML>
+
+
+
+
 
 <html>
+
 	<head>
 		<title>LS IoT Office</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<noscript>
+			<link rel="stylesheet" href="assets/css/noscript.css" />
+		</noscript>
 	</head>
+
 	<body class="is-preload">
-		
 		<!-- Header -->
+		
 		<header id="header" class="alt">
+			<a href = "../../index.html">
 			<span class="logo"><img src="images/logo.svg" alt="" /></span>
+		</a>
 			<h1>Ls IoT</h1>
 			<p>Just another free, fully responsive site template<br /></p>
-				<a href="#zero" class="button big wide smooth-scroll-middle" id="button1">   Next    </a>
+				<a href="#zero" class="button big wide smooth-scroll-middle" id="buttons1">   Next    </a>
 		</header>
-
+		
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
 					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right" >
-						<div id="zero" class="content" >
-							<h1> IoT 무인 물류 관리 시스템 </h1>
+						<div  class="content" >
+							<h1 id="zero"> IoT 무인 물류 관리 시스템 </h1>
 							<p class="major">  QR 코드를 이용한 창고의 물건 이동 및 검색을 통한 직원의 작업의 효율성을 올려주는 로봇을 제어하기 위한 설정 및 관리 하는 페이지 입니다.
 							</a></p>
 							<ul class="actions stacked">
