--- a/node_file/web/index.html
+++ b/node_file/web/index.html
@@ -87,7 +87,7 @@
                     <span class="banner-sub">Ls IoT</span>
 
                 </div>
-                <div id="one" class="banner-button scroll">Continue</div>
+                <a href="#byone"><div id="one" class="banner-button scroll smooth-scroll">Continue</div></a>
             </div>
         </div>
         <!-- post -->
@@ -233,6 +233,9 @@
             <span class="footer-copy">2021 - 2022 © LS IoT</span>
         </footer>
     </div>
+    
+    <script src="assets/js/jquery.scrolly.min.js"></script>
+    
 </body>
 
 </html>
