--- a/node_file/web/landing/office/index.html
+++ b/node_file/web/landing/office/index.html
@@ -25,20 +25,20 @@
 		</a>
 			<h1>Ls IoT</h1>
 			<p>Just another free, fully responsive site template<br /></p>
-				<a href="#zero" class="button big wide smooth-scroll-middle" id="buttons1">   Next    </a>
+				<a href="#zero" class="button big wide smooth-scroll" id="buttons1">   Next    </a>
 		</header>
 		
 		<!-- Wrapper -->
 			<div id="wrapper" class="divided">
 
 				<!-- One -->
-					<section class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right" >
+					<section id="zero" class="banner style1 orient-left content-align-left image-position-right fullscreen onload-image-fade-in onload-content-fade-right" >
 						<div  class="content" >
-							<h1 id="zero"> IoT 무인 물류 관리 시스템 </h1>
+							<h1> IoT 무인 물류 관리 시스템 </h1>
 							<p class="major">  QR 코드를 이용한 창고의 물건 이동 및 검색을 통한 직원의 작업의 효율성을 올려주는 로봇을 제어하기 위한 설정 및 관리 하는 페이지 입니다.
 							</a></p>
 							<ul class="actions stacked">
-								<li><a href="#first" class="button big wide smooth-scroll-middle"> 더 알아보기</a></li>
+								<li><a href="#first" class="button big wide smooth-scroll"> N E X T</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -53,7 +53,7 @@
 							<p> 현재 국내 물류 창고업 등록이 되어 있는 창고업(1,448곳), 항만창고(225곳), 보세창고(698곳)은의 물류 창고로 등록이 되어있습니다. 하지만 아직 많은 곳에서
 								직접적인 인력을 통하여 관리를 하고 있습니다. </p>
 								<ul class="actions stacked">
-									<li><a href="#second" class="button big wide smooth-scroll-middle"> 더 알아보기</a></li>
+									<li><a href="#second" class="button big wide smooth-scroll"> N E X T</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -67,7 +67,7 @@
 							<h2>AI 물류 측정</h2>
 							<p>물류 창고 내 AI 자동화된 기계의 물류 측정으로 실시간 물류량을 확인하고, 첨단 AI의 분석을 통한 물류의 이동 추세를 확인할 수 있습니다.</p>
 							<ul class="actions stacked">
-								<li><a href="#third" class="button big wide smooth-scroll-middle"> 더 알아보기</a></li>
+								<li><a href="#third" class="button big wide smooth-scroll"> N E X T</a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -81,7 +81,7 @@
 							<h2>물류 관리 페이지의 효율성 및 접근성 상승</h2>
 							<p> 해당 물류 센터와 연결된 웹페이지의 UI를 사용하여 접근성 높은 물류 관리 시스템 이용, 언제 어디서나 접속 가능한 물류 관리 페이지를 통해 효율성 높은 물류 관리를 합니다. </p>
 							<ul class="actions stacked">
-								<li><a href="#" class="button"> 맨 위로 </a></li>
+								<li><a href="#fourth" class="button big wide smooth-scroll"> N E X T </a></li>
 							</ul>
 						</div>
 						<div class="image">
@@ -90,7 +90,7 @@
 					</section>
 
 				<!-- Five -->
-					<section class="wrapper style1 align-center">
+					<section class="wrapper style1 align-center" id="fourth">
 						<div class="inner">
 							<h2>물류 결제 및 결제 확인</h2>
 							<p>실시간 물류량을 확인을 통해서 물류를 결제하고, 결제한 내용을 영수증을 통해 확인 할 수 있습니다. 결제한 내용은 결제 데이터 베이스에 수집되어 보관됩니다.</p>
