--- a/node_file/web/use/_intro/[Debug]intro.html
+++ b/node_file/web/use/_intro/[Debug]intro.html
@@ -8,9 +8,10 @@
     <link rel="stylesheet" type="text/css" href="../../assets/css/main.css" />
     <link rel="stylesheet" type="text/css" href="../../assets/css/intro.css" />
     <script defer src="../../assets/js/css_main.js"></script>
+    
 </head>
 
-<body>
+<body class="is-preload">
     <!-- 상단바 -->
     <div class="main">
         <!-- header -->
