--- a/node_file/web/use/_intro/intro.html
+++ b/node_file/web/use/_intro/intro.html
@@ -10,7 +10,7 @@
     <script defer src="../../assets/js/css_main.js"></script>
 </head>
 
-<body>
+<body class="is-preload">
     <!-- 상단바 -->
     <div class="main">
         <!-- header -->
