--- a/node_file/web/use/_intro/intro.html
+++ b/node_file/web/use/_intro/intro.html
@@ -57,6 +57,7 @@
     <div class="intro">
         <div class="intro_main">
             <div class="explain">
+                <a href="intro_another.html"><div>다른버전 보러가기</div></a>
                 <span>Company</span><br><br>
                 Ls IoT 플랫폼은 더욱 빨리지는 인터넷 시대에 맞춰 Global표준을 준수하여 다른 플랫폼과 호환성을 확보하며 가정, 산업, 사무에 기술을 확대 적용하여 고객들이 원하는 서비스를
                 제공하고 있습니다.
